@@ -1362,16 +1362,18 @@ progress {
  text-align:center;
 }
 
-.v-icon:not(.image-grid-item-icon):not(.info-help-icon), .svg-list-img, .svg-img, .radio-image .svg-img {
+.v-icon:not(.image-grid-item-icon), .svg-list-img, .svg-img, .radio-image .svg-img {
  width:var(--icon-size) !important;
  height:var(--icon-size) !important;
  vertical-align:middle;
 }
 
-.info-help-icon {
- margin-top:-4px;
- height:18px !important;
- width:18px !important;
+.link-item {
+ cursor:pointer;
+}
+
+.link-item:hover {
+ color:var(--active-color);
 }
 
 .svg-update-img {
