@@ -54,14 +54,14 @@ Vue.component('lms-information-dialog', {
    <p v-if="'idle'==pluginStatus && updates.details.length>0">{{i18n('The following plugins have updates available:')}}</p>
    <p v-if="'needs_restart'==pluginStatus && updates.details.length>0">{{i18n('The following plugins have been updated:')}}</p>
    <ul v-if="'downloading'!=pluginStatus && updates.details.length>0">
-    <template v-for="(plug, index) in updates.details"><li>{{plug.title}} {{plug.version}}<v-btn flat icon @click="pluginInfo(plug)" class="info-help-icon"><v-icon small>help_outline</v-icon></v-btn></li></template>
+    <template v-for="(plug, index) in updates.details"><li @click="pluginInfo(plug)" class="link-item">{{plug.title}} {{plug.version}}</li></template>
    </ul>
    <v-btn v-if="updates.details.length>0 && 'idle'==pluginStatus && unlockAll" @click="updatePlugins" flat><img class="svg-img btn-icon" :src="'update' | svgIcon(darkUi)">{{i18n('Update plugins')}}</v-btn>
    <p v-if="'downloading'==pluginStatus"><v-progress-circular size=16 width=2 indeterminate style="margin-top:-4px"></v-progress-circular> {{i18n('Downloading plugin updates')}}</p>
    <v-btn v-if="'needs_restart'==pluginStatus && unlockAll" @click="restartServer" flat>{{i18n('Restart server')}}</v-btn>
    <p v-if="'downloading'!=pluginStatus && updates.details.length>0" style="padding-top:16px">{{i18n('The following plugins are up to date:')}}</p>
    <ul>
-    <template v-for="(plug, index) in plugins.details"><li v-if="'downloading'==pluginStatus || !updates.names.has(plug.name)">{{plug.title}} {{plug.version}}<v-btn flat icon class="info-help-icon" @click="pluginInfo(plug)"><v-icon small>help_outline</v-icon></v-btn></li></template>
+    <template v-for="(plug, index) in plugins.details"><li v-if="'downloading'==pluginStatus || !updates.names.has(plug.name)" class="link-item" @click="pluginInfo(plug)">{{plug.title}} {{plug.version}}</li></template>
    </ul>
    <div class="dialog-padding"></div>
 
